--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ _ReSharper.Caches/
 /Tools/gradle/.settings/
 /Gradle/
 /Plugins/SpeechGenerationSystem
+/WindowsBuild
 
 # Visual Studio 2015 database file
 *.VC.db
